Removed personal from about, added resume button to about, re-arranged menu links, re-sized code images to square, going to try blank index -v

--- a/about.html
+++ b/about.html
@@ -38,18 +38,18 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="tsk">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="Menu">
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/graphics/about.svg"></a></li>
-            <li><a href="./code.html"><img src="./img/graphics/code.svg"></a></li>
-            <li><a href="./personal.html"><img src="./img/graphics/personal.svg"></a></li>
-            <li><a href="./journal.html"><img src="./img/graphics/journal.svg"></a></li>
-            <li><a href="./resume.html"><img src="./img/graphics/resume.svg"></a></li>
-            <li><a href="./contact.html"><img src="./img/graphics/contact.svg"></a></li>
+            <li><a href="./about.html"><img src="./img/graphics/about.svg" alt="About"></a></li>
+            <li><a href="./code.html"><img src="./img/graphics/code.svg" alt="Code"></a></li>
+            <li><a href="./journal.html"><img src="./img/graphics/journal.svg" alt="Journal"></a></li>
+            <li><a href="./personal.html"><img src="./img/graphics/personal.svg" alt="Personal"></a></li>
+            <li><a href="./resume.html"><img src="./img/graphics/resume.svg" alt="Resume"></a></li>
+            <li><a href="./contact.html"><img src="./img/graphics/contact.svg" alt="Contact"></a></li>
         </ul>
     </nav>
 
@@ -74,8 +74,6 @@
                         <br>
                         My adventure into the world of coding may not have started long ago, however I've already
                         learned an immense amount of valuable practical lessons and industry specific knowledge.
-                        Below
-                        are some of the tools and skills I've learned so far:
                     </p>
                 </article>
             </div>
@@ -172,166 +170,14 @@
                     </div>
                 </div>
             </article>
-            </div>
-        </section>
 
-        <!-- PERSONAL INTERESTS SECTION -->
-        <section class="content">
-            <div class="wide-cont">
-                <div class="top-card">
-                    <h2>Personal interests</h2>
-                    <p>As much as we try, I believe it's impossible to <em>truly</em> seperate our professional and
-                        personal worlds, as they always seem to have an influence on each other. Below are some of the
-                        things that interest me in my spare time and inform how I approach my professional work.</p>
-                </div>
-            </div>
-
-            <div class="card modular gallery">
-                <label for="expand-check1" class="expand-icon">+/-
-                    <a id="anchor-card1"></a>
-                </label>
-                <input type="checkbox" id="expand-check1" />
-                <article class="expand" id="card1">
-                    <h2>Music</h2>
-                    <p>
-                        Where would the world be without music? It has guided me, comforted me, driven me and has
-                        been the soundtrack to my inner cinema for as long as I can remember. Music is a force
-                        within my life that has likely had the most profound effect on shaping who I am and how I
-                        feel. Ever since I discovered my sister's "alternative" music collection in early
-                        highschool, I've been continually exploring and discovering new music and sharing it to
-                        whoever would listen (not many, as it turns out).
-                    </p>
-                    <p>Here is a list of <em>some</em> of my favourite albums:</p>
-                    <ul class="card-list">
-                        <li>
-                            <h3>Stolen Violin, <i>Temperate Touch, Tropical Tears (2013)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a3417893724_16.jpg" alt="Stolen Violin">
-                        </li>
-                        <li>
-                            <h3>King Krule, <i>Man Alive! (2020)</i></h3>
-                            <img src="https://media.pitchfork.com/photos/5e4d5209f98c800008cf6620/1:1/w_600/King-Krule-Man-Alive.jpg"
-                                alt="King Krule">
-                        </li>
-                        <li>
-                            <h3>Jordan Ireland With Purple Orchestra, <i>Jordan Ireland With Purple Orchestra
-                                    (2017)</i>
-                            </h3>
-                            <img src="https://f4.bcbits.com/img/a0618251442_10.jpg" alt="Jordan Ireland">
-                        </li>
-                        <li>
-                            <h3>Arthur Russell, <i>World of Echo (1986)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a4051912074_10.jpg" alt="Arthur Russell">
-                        </li>
-                        <li>
-                            <h3>Sunbeam Sound Machine, <i>Wonderer (2014)</i></h3>
-                            <img src="https://i.scdn.co/image/ab67616d0000b27305be4a82babc6e7a5199525e"
-                                alt="Sunbeam Sound Machine">
-                        </li>
-                        <li>
-                            <h3>Amen Dunes, <i>Love (2014)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a3223571064_10.jpg" alt="Amen Dunes">
-                        </li>
-                        <li>
-                            <h3>Connan Mockasin, <i>Forever Dolphin Love (2011)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a0303691458_10.jpg" alt="Connan Mockasin">
-                        </li>
-                        <li>
-                            <h3>Soda Eaves, <i>Murray, Darling (2016)</i></h3>
-                            <img src="https://f4.bcbits.com/img/a3774274208_10.jpg" alt="Soda Eaves">
-                        </li>
-                    </ul>
-
-                </article>
-            </div>
-
-            <div class="card modular gallery">
-                <label for="expand-check2" class="expand-icon">+/-
-                    <a id="anchor-card2"></a>
-                </label>
-                <input type="checkbox" id="expand-check2" />
-                <article class="expand" id="card2">
-                    <h2>Photography</h2>
-                    <p>
-                        I began my journey into photography as a young teenager who was drawn to the way certain
-                        objects, spaces or light met my eyes. I've always been enamoured by the ability that cameras
-                        have to capture moments in time.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt justo velit, id
-                        interdum diam faucibus id. Aliquam eu tincidunt erat. Sed commodo nunc sit amet augue
-                        auctor, at
-                        aliquam ex porttitor. Integer ut dapibus nisl. Praesent accumsan mattis dui vel fermentum.
-                        Pellentesque luctus posuere justo, sit amet rutrum nibh tempor non. Nulla eleifend eu orci a
-                        euismod. Mauris cursus enim a nisi congue suscipit. Etiam eleifend est odio, id congue eros
-                        ultricies sagittis. Quisque et mi massa. Nam vitae nulla sit amet tellus congue faucibus.
-                        Praesent semper elit at ultricies rutrum. Aliquam rutrum nibh in rhoncus dictum.
-                    </p>
-
-                    <form action="./photography.html">
-                        <input type="submit" value="Image gallery" class="button" />
-                    </form>
-                </article>
-            </div>
-
-            <div class="card modular gallery">
-                <label for="expand-check3" class="expand-icon">+/-
-                    <a id="anchor-card3"></a>
-                </label>
-                <input type="checkbox" id="expand-check3" />
-                <article class="expand" id="card3">
-                    <h2>Outdoors</h2>
-                    <p>
-                        As much as I love engrossing myself in designing and building things on screens, nature is
-                        where I nourish myself physically.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt justo velit, id
-                        interdum diam faucibus id. Aliquam eu tincidunt erat. Sed commodo nunc sit amet augue
-                        auctor, at
-                        aliquam ex porttitor. Integer ut dapibus nisl. Praesent accumsan mattis dui vel fermentum.
-                        Pellentesque luctus posuere justo, sit amet rutrum nibh tempor non. Nulla eleifend eu orci a
-                        euismod. Mauris cursus enim a nisi congue suscipit. Etiam eleifend est odio, id congue eros
-                        ultricies sagittis. Quisque et mi massa. Nam vitae nulla sit amet tellus congue faucibus.
-                        Praesent semper elit at ultricies rutrum. Aliquam rutrum nibh in rhoncus dictum.
-                    </p>
-
-                    <form action="./photography.html">
-                        <input type="submit" value="Image gallery" class="button" />
-                    </form>
-                </article>
-            </div>
-
-            <div class="card modular gallery">
-                <label for="expand-check4" class="expand-icon">+/-
-                    <a id="anchor-card4"></a>
-                </label>
-                <input type="checkbox" id="expand-check4" />
-                <article class="expand" id="card4">
-                    <h2>Travel</h2>
-                    <p>
-                        There is nothing quite like throwing yourself into a completely new and foreign environment for
-                        learning new things about yourself and finding new ways of interpreting the world.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt justo velit, id
-                        interdum diam faucibus id. Aliquam eu tincidunt erat. Sed commodo nunc sit amet augue
-                        auctor, at
-                        aliquam ex porttitor. Integer ut dapibus nisl. Praesent accumsan mattis dui vel fermentum.
-                        Pellentesque luctus posuere justo, sit amet rutrum nibh tempor non. Nulla eleifend eu orci a
-                        euismod. Mauris cursus enim a nisi congue suscipit. Etiam eleifend est odio, id congue eros
-                        ultricies sagittis. Quisque et mi massa. Nam vitae nulla sit amet tellus congue faucibus.
-                        Praesent semper elit at ultricies rutrum. Aliquam rutrum nibh in rhoncus dictum.
-                    </p>
-
-                    <form action="./photography.html">
-                        <input type="submit" value="Image gallery" class="button" />
-                    </form>
-                </article>
-            </div>
-
+            <!-- QUICK LINKS -->
             <div class="wide-cont">
                 <form action="./code.html">
-                    <input type="submit" value="Code" class="button" />
+                    <input type="submit" value="Projects" class="button" />
+                </form>
+                <form action="./personal.html">
+                    <input type="submit" value="Interests" class="button" />
                 </form>
                 <form action="./resume.html">
                     <input type="submit" value="Resume" class="button" />
