--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Home</title>
 </head>
 
-<body>
+<body id="home-body">
     <!-- HEADER MODULE -->
     <header>
         <!-- HEADER TITLE+CIRCLE -->
@@ -37,27 +37,27 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="tsk">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="Menu">
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/graphics/about.svg"></a></li>
-            <li><a href="./code.html"><img src="./img/graphics/code.svg"></a></li>
-            <li><a href="./personal.html"><img src="./img/graphics/personal.svg"></a></li>
-            <li><a href="./journal.html"><img src="./img/graphics/journal.svg"></a></li>
-            <li><a href="./resume.html"><img src="./img/graphics/resume.svg"></a></li>
-            <li><a href="./contact.html"><img src="./img/graphics/contact.svg"></a></li>
+            <li><a href="./about.html"><img src="./img/graphics/about.svg" alt="About"></a></li>
+            <li><a href="./code.html"><img src="./img/graphics/code.svg" alt="Code"></a></li>
+            <li><a href="./journal.html"><img src="./img/graphics/journal.svg" alt="Journal"></a></li>
+            <li><a href="./personal.html"><img src="./img/graphics/personal.svg" alt="Personal"></a></li>
+            <li><a href="./resume.html"><img src="./img/graphics/resume.svg" alt="Resume"></a></li>
+            <li><a href="./contact.html"><img src="./img/graphics/contact.svg" alt="Contact"></a></li>
         </ul>
     </nav>
 
     <!-- MAIN CONTENT -->
-    <main>
-        <section class="content" id="home">
+    <main id="home-main">
+        <section class="content" id="home-sec">
 
             <!-- HERO TITLE TEXT -->
-            <h2 id="welcome-text">Welcome to the portfolio of aspiring web developer, Tané Kaio</h2>
+            <h2 id="welcome-text">Design<br/>Create<br/>Grow<br/></h2>
 
             <!-- BUTTON TO ENTER/GO TO ABOUT -->
             <div class="cont">
