--- a/contact.html
+++ b/contact.html
@@ -37,18 +37,18 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="tsk">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="Menu">
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/graphics/about.svg"></a></li>
-            <li><a href="./code.html"><img src="./img/graphics/code.svg"></a></li>
-            <li><a href="./personal.html"><img src="./img/graphics/personal.svg"></a></li>
-            <li><a href="./journal.html"><img src="./img/graphics/journal.svg"></a></li>
-            <li><a href="./resume.html"><img src="./img/graphics/resume.svg"></a></li>
-            <li><a href="./contact.html"><img src="./img/graphics/contact.svg"></a></li>
+            <li><a href="./about.html"><img src="./img/graphics/about.svg" alt="About"></a></li>
+            <li><a href="./code.html"><img src="./img/graphics/code.svg" alt="Code"></a></li>
+            <li><a href="./journal.html"><img src="./img/graphics/journal.svg" alt="Journal"></a></li>
+            <li><a href="./personal.html"><img src="./img/graphics/personal.svg" alt="Personal"></a></li>
+            <li><a href="./resume.html"><img src="./img/graphics/resume.svg" alt="Resume"></a></li>
+            <li><a href="./contact.html"><img src="./img/graphics/contact.svg" alt="Contact"></a></li>
         </ul>
     </nav>
 
