Index finished with image and graphic, about tidied up -v

--- a/about.html
+++ b/about.html
@@ -55,7 +55,6 @@
 
     <main>
         <section class="content">
-
             <!-- PORTRAIT -->
             <figure id="about-img-cont">
                 <img id="about-img" src="./img/nz-port.jpg" alt="An image of me">
@@ -94,9 +93,6 @@
                         <li>
                             <h3>Location:</h3>Ferntree Gully, Victoria, Australia
                         </li>
-                        <li>
-                            <h3>Nationality:</h3>Australian/New Zealand
-                        </li>
                     </ul>
                 </div>
             </article>
@@ -105,7 +101,7 @@
                 <div class="card-list-grid">
                     <ul>
                         <li>
-                            <h3>Employment:</h3>
+                            <h3>Employment history:</h3>
                         </li>
                         <li>Financial technology</li>
                         <li>Pharmaceuticals</li>
