--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet" />
     <!-- FONT-AWESOME ICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/graphics/tsk-sun.svg" alt="header-logo">
+            <img src="./img/graphics/tsk-sun.svg" alt="header-logo" />
         </div>
     </header>
 
@@ -33,41 +33,55 @@
     <input type="checkbox" id="nav-check" />
     <label for="nav-check" id="nav-button">
         <!-- MOBILE BUTTON -->
-        <span class="fa-solid fa-bars" id="mob-nav-icon">
-        </span>
+        <span class="fa-solid fa-bars" id="mob-nav-icon"> </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="Menu">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="Menu" />
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/graphics/about.svg" alt="About"></a></li>
-            <li><a href="./code.html"><img src="./img/graphics/code.svg" alt="Code"></a></li>
-            <li><a href="./journal.html"><img src="./img/graphics/journal.svg" alt="Journal"></a></li>
-            <li><a href="./personal.html"><img src="./img/graphics/personal.svg" alt="Personal"></a></li>
-            <li><a href="./resume.html"><img src="./img/graphics/resume.svg" alt="Resume"></a></li>
-            <li><a href="./contact.html"><img src="./img/graphics/contact.svg" alt="Contact"></a></li>
+            <li>
+                <a href="./about.html"><img src="./img/graphics/about.svg" alt="About" /></a>
+            </li>
+            <li>
+                <a href="./code.html"><img src="./img/graphics/code.svg" alt="Code" /></a>
+            </li>
+            <li>
+                <a href="./journal.html"><img src="./img/graphics/journal.svg" alt="Journal" /></a>
+            </li>
+            <li>
+                <a href="./personal.html"><img src="./img/graphics/personal.svg" alt="Personal" /></a>
+            </li>
+            <li>
+                <a href="./resume.html"><img src="./img/graphics/resume.svg" alt="Resume" /></a>
+            </li>
+            <li>
+                <a href="./contact.html"><img src="./img/graphics/contact.svg" alt="Contact" /></a>
+            </li>
         </ul>
     </nav>
 
-
     <main>
         <section class="content">
+
+            <!-- PAGE SUBHEADING -->
+            <div class="wide-cont">
+                <h2>Contact me</h2>
+            </div>
 
             <!-- CONTACT DETAILS -->
             <article class="card modular info">
                 <h2>Email</h2>
                 <p>tanesamuelkaio@gmail.com</p>
             </article>
-
             <article class="card modular info">
                 <h2>Phone</h2>
                 <p>04-666-518-20</p>
             </article>
 
-                <!-- PROFESSIONAL/SOCIALS LOGO LINKS -->
+            <!-- PROFESSIONAL/SOCIALS LOGO LINKS -->
             <div class="wide-cont">
                 <a href="https://github.com/Lanruoj" target="_blank">
                     <img class="logo" src="./img/github.png" alt="Github" />
@@ -79,7 +93,6 @@
                     <img class="logo" src="./img/linkedin.png" alt="Linkedin" />
                 </a>
             </div>
-
         </section>
     </main>
     <!-- FOOTER -->
