Added github buttons to code -v

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <section class="content" id="home-sec">
             <!-- HERO TITLE TEXT -->
                 <figure>
-                    <img id="welcome-title" src="./img/graphics/hero.svg" alt="DESIGN CREATE GROW">
+                    <img id="welcome-title" src="./img/graphics/hero4.svg" alt="DESIGN CREATE GROW">
                 </figure>
-            <div class="wide-cont">
-                <h3 id="welcome-text">Portfolio of web developer,<br /> Tané Kaio</h3>
-            </div>
 
+                <div class="wide-cont">
+                    <h3 id="welcome-text">Portfolio of web developer,<br/> Tané Kaio</h3>
+                </div>
             <!-- BUTTON TO ENTER/GO TO ABOUT -->
             <div class="wide-cont">
                 <form action="./about.html">
