Changed head logo

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/graphics/tsk-sun.svg" alt="header-logo">
+            <img src="./img/graphics/full.svg" alt="header-logo">
         </div>
     </header>
 
