--- a/personal.html
+++ b/personal.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/graphics/tsk-sun.svg" alt="header-logo">
+            <img src="./img/graphics/full.svg" alt="header-logo">
         </div>
     </header>
 
