added todo cli app -> code + journal

--- a/about.html
+++ b/about.html
@@ -121,13 +121,16 @@
             <article class="card modular gallery">
                 <div class="card-list-grid">
                     <div>
-                        <h3>Languages:</h3>
+                        <h3>Languages/tools:</h3>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>SCSS</li>
                             <li>Bash/ZSH</li>
                             <li>Python</li>
+                            <li>SQL</li>
+                            <li>Flask</li>
+                            <li>PostgreSQL</li>
                         </ul>
                     </div>
                     <div>
@@ -139,6 +142,8 @@
                             <li>Balsamiq</li>
                             <li>Trello</li>
                             <li>CLI</li>
+                            <li>DB Browser for SQLite</li>
+                            <li>Postman</li>
                         </ul>
                     </div>
                 </div>
@@ -153,6 +158,7 @@
                             <li>Kanban board</li>
                             <li>Wireframes</li>
                             <li>CSS / HTML Validators</li>
+                            <li>Entity Relationship Diagrams</li>
                         </ul>
                     </div>
                     <div>
