+codewars link / contact

--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,9 @@
                 <a href="https://au.linkedin.com" target="_blank">
                     <img class="logo" src="./img/linkedin.png" alt="Linkedin" />
                 </a>
+                <a href="https://www.codewars.com/users/Lanruoj/completed_solutions" target="_blank">
+                    <img class="logo" src="./img/codewars.svg" alt="Codewars" />
+                </a>
             </div>
         </section>
     </main>
