+ gig guide API to code.html

--- a/code.html
+++ b/code.html
@@ -74,6 +74,7 @@
                     <input type="checkbox" id="dropdown-check" />
                     <ul class="dropdown-list">
                         <li><a href="#anchor-card1">Portfolio</a></li>
+                        <li><a href="#anchor-card6">Gig Guide webserver API</a></li>
                         <li><a href="#anchor-card2">Band webpage</a></li>
                         <li><a href="#anchor-card3">Checkbox hack</a></li>
                         <li><a href="#anchor-card4">Responsive design</a></li>
@@ -83,6 +84,7 @@
             </div>
 
             <!-- PROJECTS LIST -->
+            
             <!-- PORTFOLIO -->
             <article class="card modular gallery">
                 <span>
@@ -103,6 +105,28 @@
                     </form>
                 </div>
             </article>
+
+            <!-- GIG GUIDE API -->
+            <article class="card modular gallery">
+                <span>
+                    <a id="anchor-card6"></a>
+                </span>
+                <h2>Gig Guide webserver API</h2>
+                <figure>
+                    <a href="https://github.com/Lanruoj/Gig-Guide-Webserver-API" target="_blank"><img
+                            src="./img/gigs.png" alt="Creating a new Gig object in my Gig Guide API"></a>
+                    <figcaption>An API that allows users to post gigs and watch artists and venues for upcoming shows</figcaption>
+                </figure>
+                <div class="wide-cont">
+                    <form action="https://github.com/Lanruoj/Gig-Guide-Webserver-API" target="_blank">
+                        <input type="submit" value="Github" class="button blog-anchor" />
+                    </form>
+                    <form action="./journal.html#anchor-card6">
+                        <input type="submit" value="Article" class="button blog-anchor" />
+                    </form>
+                </div>
+            </article>
+
 
             <!-- TODO TERMINAL APP -->
             <article class="card modular gallery">
