about.html/languages updated

--- a/about.html
+++ b/about.html
@@ -131,6 +131,10 @@
                             <li>SQL</li>
                             <li>Flask</li>
                             <li>PostgreSQL</li>
+                            <li>SQL Alchemy</li>
+                            <li>Marshmallow</li>
+                            <li>Bcrypt</li>
+                            <li>JSON Web Tokens</li>
                         </ul>
                     </div>
                     <div>
