Update about information > about.html

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                     <h2>Who am I?</h2>
                     <p>
                         Hello!
-                        I'm Tané - a 26 year old currently based in the lush surroundings of the foothills of the
+                        I'm Tané - a 27 year old currently based in the lush surroundings of the foothills of the
                         Dandenong Ranges in Melbourne, Victoria. As a student of Web Development at Coder Academy I
                         spend most of my time learning and practising code, sharpening my problem solving skills and
                         learning more about the world of tech.
@@ -103,7 +103,7 @@
                         <li>
                             <h3>Employment history:</h3>
                         </li>
-                        <li>Financial technology</li>
+                        <li>Financial Technology</li>
                         <li>Pharmaceuticals</li>
                         <li>Hospitality</li>
                         <li>Warehousing</li>
@@ -112,8 +112,8 @@
                             <br>
                             <h3>Vocations:</h3>
                         </li>
-                        <li>Audio engineering</li>
-                        <li>Full-stack web development (current)</li>
+                        <li>Audio Engineering</li>
+                        <li>Full-stack Web Development (current)</li>
                     </ul>
                 </div>
             </article>
@@ -123,12 +123,14 @@
                     <div>
                         <h3>Languages/tools:</h3>
                         <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>SCSS</li>
-                            <li>Bash/ZSH</li>
+                            <li>HTML / CSS / SCSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Express</li>
+                            <li>Node</li>
+                            <li>Mongoose</li>
+                            <li>MongoDB</li>
                             <li>Python</li>
-                            <li>SQL</li>
                             <li>Flask</li>
                             <li>PostgreSQL</li>
                             <li>SQL Alchemy</li>
@@ -141,13 +143,11 @@
                         <h3>Software:</h3>
                         <ul>
                             <li>Visual Studio Code</li>
-                            <li>Git</li>
-                            <li>Github</li>
+                            <li>Git / GitHub</li>
+                            <li>Postman</li>
                             <li>Balsamiq</li>
                             <li>Trello</li>
                             <li>CLI</li>
-                            <li>DB Browser for SQLite</li>
-                            <li>Postman</li>
                         </ul>
                     </div>
                 </div>
