Update resume iframe + download link

--- a/code.html
+++ b/code.html
@@ -45,7 +45,6 @@
         <ul id="nav-list">
             <li><a href="./about.html"><img src="./img/graphics/about.svg" alt="About"></a></li>
             <li><a href="./code.html"><img src="./img/graphics/code.svg" alt="Code"></a></li>
-            <li><a href="./journal.html"><img src="./img/graphics/journal.svg" alt="Journal"></a></li>
             <li><a href="./personal.html"><img src="./img/graphics/personal.svg" alt="Personal"></a></li>
             <li><a href="./resume.html"><img src="./img/graphics/resume.svg" alt="Resume"></a></li>
             <li><a href="./contact.html"><img src="./img/graphics/contact.svg" alt="Contact"></a></li>
@@ -84,7 +83,7 @@
             </div>
 
             <!-- PROJECTS LIST -->
-            
+
             <!-- PORTFOLIO -->
             <article class="card modular gallery">
                 <span>
@@ -115,7 +114,8 @@
                 <figure>
                     <a href="https://github.com/Lanruoj/Gig-Guide-Webserver-API" target="_blank"><img
                             src="./img/gigs.png" alt="Creating a new Gig object in my Gig Guide API"></a>
-                    <figcaption>An API that allows users to post gigs and watch artists and venues for upcoming shows</figcaption>
+                    <figcaption>An API that allows users to post gigs and watch artists and venues for upcoming shows
+                    </figcaption>
                 </figure>
                 <div class="wide-cont">
                     <form action="https://github.com/Lanruoj/Gig-Guide-Webserver-API" target="_blank">
@@ -137,7 +137,9 @@
                 <figure>
                     <a href="https://github.com/Lanruoj/Tracks-Task-Manager" target="_blank"><img
                             src="./img/todo_scr.png" alt="To-do CLI app"></a>
-                    <figcaption>A to-do list CLI application where you can add tasks with an optional deadline time, mark tasks as done, delete tasks, view completed tasks, view help documentation and more.</figcaption>
+                    <figcaption>A to-do list CLI application where you can add tasks with an optional deadline time,
+                        mark tasks as done, delete tasks, view completed tasks, view help documentation and more.
+                    </figcaption>
                 </figure>
                 <div class="wide-cont">
                     <form action="https://github.com/Lanruoj/Tracks-Task-Manager" target="_blank">
@@ -229,9 +231,9 @@
                     <form action="https://github.com/Lanruoj/CA-W3-Ibis-Responsive-Challenge" target="_blank">
                         <input type="submit" value="Github" class="button blog-anchor" />
                     </form>
-                <form action="./journal.html#anchor-card5">
-                    <input type="submit" value="Article" class="button blog-anchor" />
-                </form>
+                    <form action="./journal.html#anchor-card5">
+                        <input type="submit" value="Article" class="button blog-anchor" />
+                    </form>
                 </div>
             </article>
 
@@ -240,7 +242,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <p id="footer-text">&copy; Tané Kaio, 2022</p>
+        <p id="footer-text">&copy; Tané Kaio, 2023</p>
     </footer>
 </body>
 
