--- a/resume.html
+++ b/resume.html
@@ -58,12 +58,12 @@
             <!-- RESUME IFRAME -->
             <article class="card doc">
                 <h2>Resume</h2>
-                <iframe src="./img/resume-template.pdf"></iframe>
+                <iframe src="./docs/TaneKaio_CV.pdf"></iframe>
             </article>
 
             <!-- DOWNLOAD BUTTON -->
             <div class="wide-cont">
-                <a class="button" href="./img/resume-template.pdf" download>
+                <a class="button" href="./docs/TaneKaio_CV.pdf" download>
                     Download
                 </a>
             </div>
@@ -72,7 +72,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <p id="footer-text">&copy; Tané Kaio, 2022</p>
+        <p id="footer-text">&copy; Tané Kaio, 2023</p>
     </footer>
 </body>
 
