--- a/code.html
+++ b/code.html
@@ -45,7 +45,6 @@
         <ul id="nav-list">
             <li><a href="./about.html"><img src="./img/graphics/about.svg" alt="About"></a></li>
             <li><a href="./code.html"><img src="./img/graphics/code.svg" alt="Code"></a></li>
-            <li><a href="./personal.html"><img src="./img/graphics/personal.svg" alt="Personal"></a></li>
             <li><a href="./resume.html"><img src="./img/graphics/resume.svg" alt="Resume"></a></li>
             <li><a href="./contact.html"><img src="./img/graphics/contact.svg" alt="Contact"></a></li>
         </ul>
@@ -72,12 +71,11 @@
                     </label>
                     <input type="checkbox" id="dropdown-check" />
                     <ul class="dropdown-list">
-                        <li><a href="#anchor-card1">Portfolio</a></li>
+                        <li><a href="#anchor-card0">Portfolio</a></li>
                         <li><a href="#anchor-card6">Gig Guide webserver API</a></li>
+                        <li><a href="#anchor-card1">To-do list CLI app</a></li>
                         <li><a href="#anchor-card2">Band webpage</a></li>
                         <li><a href="#anchor-card3">Checkbox hack</a></li>
-                        <li><a href="#anchor-card4">Responsive design</a></li>
-                        <!-- <li><a href="#anchor-card5">Rainbow circles</a></li> -->
                     </ul>
                 </nav>
             </div>
@@ -99,9 +97,6 @@
                     <form action="https://github.com/Lanruoj/Lanruoj.github.io" target="_blank">
                         <input type="submit" value="Github" class="button blog-anchor" />
                     </form>
-                    <form action="./journal.html#anchor-card0">
-                        <input type="submit" value="Article" class="button blog-anchor" />
-                    </form>
                 </div>
             </article>
 
@@ -121,9 +116,6 @@
                     <form action="https://github.com/Lanruoj/Gig-Guide-Webserver-API" target="_blank">
                         <input type="submit" value="Github" class="button blog-anchor" />
                     </form>
-                    <form action="./journal.html#anchor-card6">
-                        <input type="submit" value="Article" class="button blog-anchor" />
-                    </form>
                 </div>
             </article>
 
@@ -138,15 +130,12 @@
                     <a href="https://github.com/Lanruoj/Tracks-Task-Manager" target="_blank"><img
                             src="./img/todo_scr.png" alt="To-do CLI app"></a>
                     <figcaption>A to-do list CLI application where you can add tasks with an optional deadline time,
-                        mark tasks as done, delete tasks, view completed tasks, view help documentation and more.
+                        mark tasks as done, delete tasks, view completed tasks, view help documentation and more
                     </figcaption>
                 </figure>
                 <div class="wide-cont">
                     <form action="https://github.com/Lanruoj/Tracks-Task-Manager" target="_blank">
                         <input type="submit" value="Github" class="button blog-anchor" />
-                    </form>
-                    <form action="./journal.html#anchor-card1">
-                        <input type="submit" value="Article" class="button blog-anchor" />
                     </form>
                 </div>
             </article>
@@ -160,14 +149,11 @@
                 <figure>
                     <a href="https://github.com/Lanruoj/ca_html_band_challenge" target="_blank"><img
                             src="./img/band.png" alt="Band challenge webpage"></a>
-                    <figcaption>Creating a page about a band I like using HTML.</figcaption>
+                    <figcaption>Creating a page about a band I like using HTML</figcaption>
                 </figure>
                 <div class="wide-cont">
                     <form action="https://github.com/Lanruoj/ca_html_band_challenge" target="_blank">
                         <input type="submit" value="Github" class="button blog-anchor" />
-                    </form>
-                    <form action="./journal.html#anchor-card2">
-                        <input type="submit" value="Article" class="button blog-anchor" />
                     </form>
                 </div>
             </article>
@@ -181,61 +167,16 @@
                     <a href="https://github.com/Lanruoj/CA-W2-Example-Page" target="_blank"><img src="./img/buttons.png"
                             alt="Contact form with hide/show buttons"></a>
                     <figcaption>Learning how to create "buttons" with checkboxes and hiding/showing content with
-                        them.
+                        them
                     </figcaption>
                 </figure>
                 <div class="wide-cont">
                     <form action="https://github.com/Lanruoj/CA-W2-Example-Page" target="_blank">
                         <input type="submit" value="Github" class="button blog-anchor" />
                     </form>
-                    <form action="./journal.html#anchor-card3">
-                        <input type="submit" value="Article" class="button blog-anchor" />
-                    </form>
                 </div>
             </article>
 
-            <article class="card modular gallery">
-                <span>
-                    <a id="anchor-card4"></a>
-                </span>
-                <h2>Rainbow circles</h2>
-                <figure>
-                    <a href="https://github.com/Lanruoj/ca_css_rainbow_circles_challenge" target="_blank"><img
-                            src="./img/circles.png" alt="Rainbow circles"></a>
-                    <figcaption>Creating rainbow coloured concentric circles using CSS.
-                    </figcaption>
-                </figure>
-                <div class="wide-cont">
-                    <form action="https://github.com/Lanruoj/ca_css_rainbow_circles_challenge" target="_blank">
-                        <input type="submit" value="Github" class="button blog-anchor" />
-                    </form>
-                    <form action="./journal.html#anchor-card4">
-                        <input type="submit" value="Article" class="button blog-anchor" />
-                    </form>
-                </div>
-            </article>
-
-            <article class="card modular gallery">
-                <span>
-                    <a id="anchor-card5"></a>
-                </span>
-                <h2>Responsive design challenge</h2>
-                <figure>
-                    <a href="https://github.com/Lanruoj/CA-W3-Ibis-Responsive-Challenge" target="_blank"><img
-                            src="./img/ibis.png" alt="Ibis responsive screenshot"></a>
-                    <figcaption>Adding a hamburger nav-menu + practising responsive design using the mobile-first
-                        principle.
-                    </figcaption>
-                </figure>
-                <div class="wide-cont">
-                    <form action="https://github.com/Lanruoj/CA-W3-Ibis-Responsive-Challenge" target="_blank">
-                        <input type="submit" value="Github" class="button blog-anchor" />
-                    </form>
-                    <form action="./journal.html#anchor-card5">
-                        <input type="submit" value="Article" class="button blog-anchor" />
-                    </form>
-                </div>
-            </article>
 
 
         </section>
