--- a/contact.html
+++ b/contact.html
@@ -80,10 +80,7 @@
                 <a href="https://github.com/Lanruoj" target="_blank">
                     <img class="logo" src="./img/github.png" alt="Github" />
                 </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img class="logo" src="./img/twitter.png" alt="Twitter" />
-                </a>
-                <a href="https://au.linkedin.com" target="_blank">
+                <a href="https://www.linkedin.com/in/tane-kaio/" target="_blank">
                     <img class="logo" src="./img/linkedin.png" alt="Linkedin" />
                 </a>
                 <a href="https://www.codewars.com/users/Lanruoj/completed_solutions" target="_blank">
