Add hyperlinks to contact details

--- a/code.html
+++ b/code.html
@@ -91,7 +91,7 @@
                 <figure>
                     <a href="https://github.com/Lanruoj/Lanruoj.github.io" target="_blank"><img
                             src="./img/portfolio.png" alt="Screenshot of Portfolio about page"></a>
-                    <figcaption>My portfolio site for Coder Academy's T1A2 assignment</figcaption>
+                    <figcaption>My portfolio site using purely HTML & CSS/SCSS</figcaption>
                 </figure>
                 <div class="wide-cont">
                     <form action="https://github.com/Lanruoj/Lanruoj.github.io" target="_blank">
