--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,11 @@
             <!-- CONTACT DETAILS -->
             <article class="card modular info">
                 <h2>Email</h2>
-                <p>tanesamuelkaio@gmail.com</p>
+                <a href="mailto:tanesamuelkaio@gmail.com">tanesamuelkaio@gmail.com</a>
             </article>
             <article class="card modular info">
                 <h2>Phone</h2>
-                <p>04-666-518-20</p>
+                <a href="tel:0466651820">04-666-518-20</a>
             </article>
 
             <!-- PROFESSIONAL/SOCIALS LOGO LINKS -->
