Remove default styling for contact hyperlinks

--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,11 @@
             <!-- CONTACT DETAILS -->
             <article class="card modular info">
                 <h2>Email</h2>
-                <a href="mailto:tanesamuelkaio@gmail.com">tanesamuelkaio@gmail.com</a>
+                <a href="mailto:tanesamuelkaio@gmail.com" class="contact-link">tanesamuelkaio@gmail.com</a>
             </article>
             <article class="card modular info">
                 <h2>Phone</h2>
-                <a href="tel:0466651820">04-666-518-20</a>
+                <a href="tel:0466651820" class="contact-link">04-666-518-20</a>
             </article>
 
             <!-- PROFESSIONAL/SOCIALS LOGO LINKS -->
